--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nuxt/eslint": "1.4.1",
     "@nuxt/icon": "1.13.0",
     "@nuxt/ui": "3.1.2",
+    "@tailwindcss/vite": "^4.1.7",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.3",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.6.3",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1",
