--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@milkdown/kit": "^7.11.0",
+    "@milkdown/theme-nord": "^7.11.0",
+    "@milkdown/vue": "^7.11.0",
     "@nuxt/eslint": "1.4.1",
     "@nuxt/icon": "1.13.0",
     "@nuxt/ui": "3.1.2",
@@ -22,5 +25,8 @@
     "vue-router": "^4.5.1",
     "zod": "^3.25.7"
   },
-  "packageManager": "pnpm@10.2.0+sha512.0d27364e0139c6aadeed65ada153135e0ca96c8da42123bd50047f961339dc7a758fc2e944b428f52be570d1bd3372455c1c65fa2e7aa0bfbf931190f9552001"
+  "packageManager": "pnpm@10.2.0+sha512.0d27364e0139c6aadeed65ada153135e0ca96c8da42123bd50047f961339dc7a758fc2e944b428f52be570d1bd3372455c1c65fa2e7aa0bfbf931190f9552001",
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
+  }
 }
