--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@milkdown/kit": "^7.11.0",
+    "@milkdown/plugin-listener": "^7.11.1",
     "@milkdown/theme-nord": "^7.11.0",
     "@milkdown/vue": "^7.11.0",
     "@nuxt/eslint": "1.4.1",
@@ -18,12 +19,12 @@
     "@nuxt/ui": "3.1.2",
     "@tailwindcss/vite": "^4.1.7",
     "eslint": "^9.0.0",
-    "nuxt": "^3.17.3",
+    "nuxt": "^3.17.4",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.6.3",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1",
-    "zod": "^3.25.7"
+    "zod": "^3.25.23"
   },
   "packageManager": "pnpm@10.2.0+sha512.0d27364e0139c6aadeed65ada153135e0ca96c8da42123bd50047f961339dc7a758fc2e944b428f52be570d1bd3372455c1c65fa2e7aa0bfbf931190f9552001",
   "devDependencies": {
