--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/icon": "1.13.0",
     "@nuxt/ui": "3.1.2",
     "@tailwindcss/vite": "^4.1.7",
+    "@vueuse/core": "^13.2.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.4",
     "tailwindcss": "^4.1.7",
