--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@nuxt/ui": "3.1.2",
     "@tailwindcss/vite": "^4.1.7",
     "@vueuse/core": "^13.2.0",
+    "dompurify": "^3.2.6",
     "eslint": "^9.0.0",
+    "jsdom": "^26.1.0",
+    "marked": "^15.0.12",
     "nuxt": "^3.17.4",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.6.3",
@@ -25,6 +28,8 @@
   },
   "packageManager": "pnpm@10.2.0+sha512.0d27364e0139c6aadeed65ada153135e0ca96c8da42123bd50047f961339dc7a758fc2e944b428f52be570d1bd3372455c1c65fa2e7aa0bfbf931190f9552001",
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^21.1.7"
   }
 }
