--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/dompurify": "^3.2.0",
-    "@types/jsdom": "^21.1.7"
+    "@types/jsdom": "^21.1.7",
+    "wrangler": "^4.16.1"
   }
 }
