--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsdom": "^26.1.0",
     "marked": "^15.0.12",
     "nuxt": "^3.17.4",
+    "nuxt-auth-utils": "^0.5.20",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.6.3",
     "vue": "^3.5.14",
@@ -31,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/dompurify": "^3.2.0",
     "@types/jsdom": "^21.1.7",
+    "nitro-cloudflare-dev": "^0.2.2",
     "wrangler": "^4.16.1"
   }
 }
